<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dismas.imaya.gatekeeper.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/verify"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/verify"
                android:layout_marginTop="58dp"
                android:textColor="@color/white"
                android:background="@drawable/verifybtn"
                android:layout_below="@+id/wrap_spinner"
                android:layout_centerHorizontal="true" />

            <!-- Spinner Dropdown -->
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="172dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/spinner"
                android:layout_alignStart="@+id/verify"
                android:id="@+id/wrap_spinner">
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:prompt="@string/set_point"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:spinnerMode="dropdown"

                    />
            </RelativeLayout>
            <Button
                android:text="@string/exit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verify"
                android:layout_alignEnd="@+id/verify"
                android:layout_marginTop="81dp"
                android:textColor="#FF0000"
                android:background="@drawable/exitbtn"
                android:id="@+id/exit" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/small"
                android:id="@+id/imageView2"
                android:layout_marginBottom="32dp"
                android:layout_above="@+id/verify"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/developed" />
</RelativeLayout>
