<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:components="http://schemas.android.com/apk/res/com.dismas.imaya.gatekeeper"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dismas.imaya.gatekeeper.VerifyActivity">


    <TextView
        android:text="@string/waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp" />
    <TextView
        android:text="@string/for_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:id="@+id/textView2" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/developed"
        android:id="@+id/textView3" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <com.dismas.imaya.gatekeeper.GIFView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="95dp"
            components:src="@drawable/ellipsis"
            android:id="@+id/imageView4"
            />

    </RelativeLayout>

    <Button
        android:text="Stop Verification"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:textColor="@color/red"
        android:background="@drawable/spinner"
        android:id="@+id/cancel" />


</RelativeLayout>
